--- a/ms29/ms29.vcxproj
+++ b/ms29/ms29.vcxproj
@@ -56,6 +56,7 @@
   <ImportGroup Label="ExtensionSettings">
   </ImportGroup>
   <ImportGroup Label="Shared">
+    <Import Project="..\utilities\utilities.vcxitems" Label="Shared" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
@@ -168,18 +169,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp" />
-    <ClCompile Include="Patch.cpp" />
-    <ClCompile Include="Pointer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="classes\camera.hpp" />
     <ClInclude Include="classes\tags.hpp" />
     <ClInclude Include="classes\ui.hpp" />
     <ClInclude Include="memory\local_types.hpp" />
-    <ClInclude Include="Patch.hpp" />
-    <ClInclude Include="Pointer.hpp" />
-    <ClInclude Include="utils\Console.hpp" />
-    <ClInclude Include="utils\Utils.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
