Added `PrintGameSystems` Renamed `s_game_state_definition` to `s_game_system` Named most of the unknowns in `e_game_state` Renamed `e_game_state` to `e_game_system` All praise lord Camden for his majesty is too much

--- a/ms23/ms23.vcxproj
+++ b/ms23/ms23.vcxproj
@@ -28,6 +28,7 @@
     <ClInclude Include="classes\game_engine.hpp" />
     <ClInclude Include="classes\game_globals.hpp" />
     <ClInclude Include="classes\game_state.hpp" />
+    <ClInclude Include="classes\game_systems.hpp" />
     <ClInclude Include="classes\game_update.hpp" />
     <ClInclude Include="classes\level.hpp" />
     <ClInclude Include="classes\map.hpp" />
