Updated `vftable` to `s_vftable` Added functions to `s_vftable` Added and initialized `g_vftables` vector TODO: finish adding all member counts to `g_vftables`
Added `players` class, and hooked `player_datum_get_active_armor_loadout_customization`

Added functions to `s_simulation_globals_type_collection`

--- a/ms23/ms23.vcxproj
+++ b/ms23/ms23.vcxproj
@@ -35,6 +35,7 @@
     <ClInclude Include="classes\misc.hpp" />
     <ClInclude Include="classes\networking.hpp" />
     <ClInclude Include="classes\physics.hpp" />
+    <ClInclude Include="classes\players.hpp" />
     <ClInclude Include="classes\player_profile.hpp" />
     <ClInclude Include="classes\preferences.hpp" />
     <ClInclude Include="classes\print.hpp" />
