ms23 dllmain cleanup

--- a/dll_proxy/dll_proxy.vcxproj
+++ b/dll_proxy/dll_proxy.vcxproj
@@ -124,12 +124,13 @@ echo f|xcopy /Y  $(ProjectDir)info\BINKW32.dll $(SolutionDir)BINKW32_org.dll</Co
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
-      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;D3DX943_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <PrecompiledHeaderFile />
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -170,7 +171,7 @@ echo f|xcopy /Y  $(ProjectDir)info\BINKW32.dll $(SolutionDir)BINKW32_org.dll</Co
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
-      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
@@ -178,6 +179,7 @@ echo f|xcopy /Y  $(ProjectDir)info\BINKW32.dll $(SolutionDir)BINKW32_org.dll</Co
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;D3DX943_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <PrecompiledHeaderFile />
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
