--- a/ms23/ms23.vcxproj
+++ b/ms23/ms23.vcxproj
@@ -24,6 +24,7 @@
   <ItemGroup>
     <ClInclude Include="classes\camera.hpp" />
     <ClInclude Include="classes\cinematic.hpp" />
+    <ClInclude Include="classes\classes.hpp" />
     <ClInclude Include="classes\filo.hpp" />
     <ClInclude Include="classes\game_engine.hpp" />
     <ClInclude Include="classes\game_globals.hpp" />
@@ -44,6 +45,7 @@
     <ClInclude Include="classes\tags.hpp" />
     <ClInclude Include="classes\ui.hpp" />
     <ClInclude Include="classes\unit.hpp" />
+    <ClInclude Include="main.hpp" />
     <ClInclude Include="memory\local_types.hpp" />
     <ClInclude Include="memory\tag_definitions.hpp" />
     <ClInclude Include="memory\tag_groups.hpp" />
