--- a/ms23/ms23.vcxproj.filters
+++ b/ms23/ms23.vcxproj.filters
@@ -79,6 +79,10 @@
     <ClInclude Include="classes\players.hpp">
       <Filter>classes</Filter>
     </ClInclude>
+    <ClInclude Include="classes\classes.hpp">
+      <Filter>classes</Filter>
+    </ClInclude>
+    <ClInclude Include="main.hpp" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="memory">
