Refactored and moved `cache_file` code to its own file

--- a/ms23/ms23.vcxproj
+++ b/ms23/ms23.vcxproj
@@ -22,6 +22,7 @@
     <ClCompile Include="dllmain.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="classes\cache_files.hpp" />
     <ClInclude Include="classes\camera.hpp" />
     <ClInclude Include="classes\cinematic.hpp" />
     <ClInclude Include="classes\classes.hpp" />
